# teo-gz-sim-models

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
doc/: teo-gz-sim-models-install.md
models/teo/: head.sdf  leftArm.sdf  leftLeg.sdf  model.config  rightArm.sdf  rightLeg.sdf  root.sdf  teo.sdf  trunk.sdf
models/teo/conf/: gazebo_teo_head.ini  gazebo_teo_imu.ini  gazebo_teo_leftArm.ini  gazebo_teo_leftArm_ft.ini  gazebo_teo_leftLeg.ini  gazebo_teo_leftLeg_ft.ini  gazebo_teo_rgbd.ini  gazebo_teo_rightArm.ini  gazebo_teo_rightArm_ft.ini  gazebo_teo_rightLeg.ini  gazebo_teo_rightLeg_ft.ini  gazebo_teo_trunk.ini  teo_nws_ros2.xml  teo_nws_yarp.xml
models/teo/head/: model.config
models/teo/leftArm/: model.config
models/teo/leftLeg/: leftLeg.sdf  model.config
models/teo/parts/: head.sdf  rightArm.sdf  rightLeg.sdf  trunk.sdf
models/teo/rightArm/: model.config  rightArm.sdf
models/teo/rightLeg/: model.config  rightLeg.sdf
models/teo/root/: model.config  root.sdf
models/teo/trunk/: model.config
models/teo_fixed/: model.config  teo_fixed.sdf
models/teo_lacqueyFetch/: model.config  teo_lacqueyFetch.sdf
models/teo_lacqueyFetch/conf/: gazebo_teo_leftLacqueyFetch_externalFinger.ini  (+7 more)
models/teo_lacqueyFetch_fixed/: model.config  teo_lacqueyFetch_fixed.sdf
models/teo_stump/: Stump.stl  model.config  stump.sdf  teo_stump.sdf
models/teo_stump_fixed/: model.config  teo_stump_fixed.sdf
worlds/: teo.sdf  teo_fixed.sdf  teo_lacqueyFetch.sdf  teo_lacqueyFetch_fixed.sdf  teo_stump.sdf  teo_stump_fixed.sdf
worlds/misc/: sun.sdf
(+42 files in other folders)
